# job-ops

./: .env.example  .gitignore  README.md  cv.example.md  pyproject.toml
.claude/skills/job-ops-eval/: SKILL.md
config/: archetypes.yml  profile.example.yml  search.yml.example
job_ops/: __init__.py  ai_intent.py  anti_detect.py  archetypes.py  config.py  cv_reader.py  email_sender.py  evaluator.py  forum_cache.py  forum_lookup.py  history.py  report.py  role_filter.py  scraper_104.py  tracker.py
launchd/: com.job-ops.daily.plist.example
modes/: _shared.md  comp-research.md  cv-match.md  interview-prep.md  legitimacy.md  level-strategy.md  personalization.md  role-summary.md
scripts/: eval.py  install-launchd.sh  reverify-expired.py  run-daily.py
tests/: test_ai_intent.py  test_archetypes.py  test_config.py  test_cv_reader.py  test_evaluator.py  test_forum_cache.py  test_history.py  test_report.py  test_report_eval_integration.py  test_role_filter.py  test_scraper.py  test_tracker.py
