[project]
name = "job-ops"
version = "0.1.0"
description = "Daily 104 job scraper with Gmail SMTP report"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "markdown>=3.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["job_ops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
